[package]
name = "upload"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-events = "0.2.0"
gloo-utils = "0.2.0"
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["CssStyleDeclaration", "Document", "DomTokenList", "HtmlElement", "HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
