[package]
name = "upload"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-events = "0.2.0"
gloo-utils = "0.2.0"
indexed-db = "0.4.1"
log = "0.4.22"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.70", features = ["CssStyleDeclaration", "Document", "DomTokenList", "HtmlElement", "HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
